--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -40,6 +40,7 @@ http {
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
 			proxy_pass http://app_server;
+			deny 106.73.25.161; # Deny a single IP
 		}
 	}
 }
